--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset='utf-8'>
         <title>Flexy Blog</title>
+
+        <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
+        <meta name='author' content='Jennifer Oakes'>
         <link rel='stylesheet' href='style.css'>
     </head>
     <body>
