--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <header class='hero'>
             <h1>Flexy Blog</h1>
+            <p><i class="fa fa-bars" aria-hidden="true"></i></p>
             <nav>
                 <ul>
                     <li><a href='#'>Home</a></li>
