--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
         <header class='hero'>
             <h1>Flexy Blog</h1>
-            <p><i class="fa fa-bars" aria-hidden="true"></i></p>
             <nav>
                 <ul>
+                    <a href='#comments' class='fa fa-bars'></a>
                     <li><a href='#'>Home</a></li>
                     <li><a href='#'>About</a></li>
                     <li><a href='#'>Search</a></li>
