--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
         <meta name='author' content='Jennifer Oakes'>
-        <link rel='stylesheet' href='style.css'>
+        <link rel='stylesheet' href='newstyle.css'>
     </head>
     <body>
 
